@@ -33,6 +33,7 @@ unset($prettyFilters['smfstore']);
 unset($prettyFilters['smfclassifieds']);
 unset($prettyFilters['ezportalpages']);
 unset($prettyFilters['aeva']);
+unset($prettyFilters['googletagged']);
 
 
 updateSettings(array('pretty_filters' => isset($smcFunc) ? serialize($prettyFilters) : addslashes(serialize($prettyFilters))));
